# srebench

./: .env  .gitignore  .rooignore  .roomodes  EVAL.md  OVERVIEW.md  README.md  main.py  project_overview.json  pyproject.toml
.roo/: mcp.json
.state/reports/: test_result_comparator_validation_report.json
.state/tasks/: 010:feat:implement_semantic_similarity.json  020:feat:implement_keyword_checks.json  030:feat:implement_causal_chain_analysis.json  040:test:validate_comparison_logic.json  validate_result_comparator.json  validate_result_comparator_refactor.json
basic_agent/: basic_agent.py  basic_agent_adapter.py
eval_pipeline/: agent_interface.py  efficiency_evaluator.py  result_comparator.py  scenario_evaluator_orchestrator.py
memory-bank/: activeContext.md  progress.md
prompts/: v0.md
scenarios/scenario_cpu_limit_001/ground_truth/: root_cause.md
scenarios/scenario_cpu_limit_001/state/: logs.jsonl  (+1 more)
src/: config.py  llm_provider.py  main.py  orechestrator_builder.py  web_ui.py
src/basic_agent/: basic_agent.py  basic_agent_adapter.py
src/eval_pipeline/: agent_interface.py  comparison_utils.py  efficiency_evaluator.py  evaluation_writer.py  result_comparator.py  scenario_evaluator_orchestrator.py  scenario_loader.py
src/prompts/: basic_agent_prompts.py  v1.md  v2.md
src/results_viewer/: browse_results.html  browse_results_script.js  common_styles.css  custom_scenario.html  custom_script.js  custom_style.css  home.html  index.html  run_bench.html  run_bench_script.js  script.js  style.css  utils.js
tests/basic_agent/: test_basic_agent.py
(+18 files in other folders)
