[project]
name = "srebench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=0.3.14",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "scikit-learn>=1.6.1",
]
